# notimetowaste

./: README.md
IaC/terraform-docker/: README.md  main.tf  variables.tf
backend/django-portfolio-app/: Makefile
backend/django-portfolio-app/personal_portfolio/: settings.py
backend/django-portfolio-app/projects/: models.py
backend/django-portfolio-app/templates/: base.html
backend/fastapi-graphql/: .env.example
backend/fastapi-graphql/fastapi_graphql/: config.py  main.py
backend/fastapi-production-guide/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml
backend/fastapi-production-guide/app/: config.py  conftest.py  main.py
backend/fastapi-production-guide/app/routers/auth/: auth.py  models.py
backend/fastapi-production-guide/app/routers/todos/: models.py  todos.py
backend/fastapi-production-guide/app/utilities/: db.py  logger.py
backend/fastapi-production-guide/k8s/: kustomization.yaml
backend/fastapi-production-guide/k8s/base/: deployment.yaml  service.yaml
backend/fastapi-production-guide/nginx/: nginx.conf
frontend/fullstack-online-grocery-store/nextjs-online-grocery-store/: .env  next.config.mjs  package-lock.json
frontend/nextjs-dashboard/: auth.ts  package-lock.json  package.json
frontend/nextjs-dashboard/app/: layout.tsx  page.tsx
frontend/nextjs-dashboard/scripts/: seed.pg.js
fullstack/fullstack-ai-saas/: README.md  package-lock.json  package.json
fullstack/fullstack-ai-saas/lib/: utils.ts
fullstack/fullstack-ai-saas/types/: index.d.ts
fullstack/fullstack-online-grocery-store/nextjs-online-grocery-store/: package.json
fullstack/nextjs-dashboard/: package-lock.json
go/kafka-bridge/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
go/kafka-bridge/migrations/: 000001_create_events_table.up.sql
java/javabegineer/: Makefile  README.md  pom.xml
llm/bentoml-tutorial/: README.md  app.ipynb  client.py  pyproject.toml  whisper-service.py
llm/chainlit-tutorial/: .env.example  .gitignore  README.md  pyproject.toml
llm/chainlit-tutorial/advance/: chainlit-mrkl.py
llm/chainlit-tutorial/basic/: chainlit-ask-user.py  chainlit-chat-profile-with-auth.py  chainlit-langchain.py  chainlit-llama-index.py  chainlit-minimal.py  chainlit-multi-modality.py  chainlit-openai.py  chainlit-prompt-playground.py  chainlit-resume-chat.py
llm/langchain-fastapi/: Makefile  docker-compose.yaml  pyproject.toml
llm/langchain-fastapi/app/: config.py  conftest.py  deps.py  main.py  model.py  provider.py
llm/langchain-fastapi/app/test/: test_app.py
llm/langchain-tutorial/: .env.example  .gitignore  README.md  pyproject.toml
llm/langchain-tutorial/apps/: langchain-rag-harry-potter.ipynb  langchain-rag-quickstart.ipynb
llm/langchain-tutorial/basic/: langchain-conversational-memory.ipynb  langchain-elasticsearch.ipynb  langchain-milvus.ipynb  langchain-minimal.ipynb  langchain-prompt.ipynb  langchain-retrieval-augmentation.ipynb  langchain-runnable-interface.ipynb  langchain-self-query-retriever.ipynb
llm/llama-index-tutorial/: .gitignore  pyproject.toml
llm/llama-index-tutorial/building-agentic-rag-with-llamaindex/: README.md  llama-index-agent-reasoning-loop.ipynb  llama-index-multi-document-agent.ipynb  llama-index-router-engine.ipynb  llama-index-tool-calling.ipynb
llm/transformer-tutorial/: README.md  app.py  pyproject.toml  requirements.txt  transformer-bce-embedding.ipynb  transformer-minimal.ipynb  transformer-model-fine-tuning.ipynb
llm/transformer-tutorial/fine-tune-phi-3-pyomo/: README.md  llm.ipynb
llm/transformer-tutorial/fine-tune-sentiment-analysis/: fine-tune-llama-for-sentiment-analysis.ipynb
notes/: apps.md  argocd.md  kubernetes.md  linux.md  proxmox.md  terraform.md
python/airflow-begineer/: Dockerfile  README.md  pyproject.toml  requirements.txt
python/airflow-begineer/airflow_docker/: docker-compose.yaml
python/airflow-begineer/back/dags/: dag_with_cron_expression.py  dag_with_postgres_operator.py  dag_with_python_operator.py  dag_with_taskflow_api.py  first_dags.py
python/airflow-begineer/dags/: dag_with_catchup_and_backfill.py  dag_with_minio_s3.py  dag_with_postgres_hooks.py  dag_with_python_dependencies.py
python/airflow-begineer/data/: data.csv
python/django-portfolio-app/: README.md  pyproject.toml
python/django-portfolio-app/pages/: urls.py
python/django-portfolio-app/personal_portfolio/: urls.py
python/django-portfolio-app/projects/: admin.py
python/django-portfolio-app/projects/migrations/: 0002_project_image.py
python/django-portfolio-app/projects/static/projects/: style.css
python/django-portfolio-app/projects/templates/projects/: project_detail.html
python/fastapi-graphql/: .gitignore  README.md  app.py  pyproject.toml
python/fastapi-graphql/fastapi_graphql/: __main__.py  schema.py
python/fastapi-graphql/fastapi_graphql/graphql/: mutation.py
python/langchain-begineer/: .gitignore  client.py  llm-chain.ipynb  pyproject.toml  serve.py
python/pyspark-project-structure/: .gitignore  README.md  common.py  requirements.txt  second_job.py
python/pyspark-project-structure/analysis_job_package/: analysis.py
python/pyspark-project-structure/docker-spark-dependency/: Dockerfile
python/python-data-format/: README.md  arrow-example.ipynb  avro-example.ipynb  data.json  data.proto  data_pb2.py  example.thrift  jsonschema-example.ipynb  protobuf-example.ipynb  pyproject.toml  thrift-example.ipynb
python/python-data-format/example/: PersonService-remote  PersonService.py  ttypes.py
python/queueing-theory/: Makefile  README.md  app.ipynb  modsim.py  one-queue-or-two.ipynb  pyproject.toml  streamlit_queueing_system.py
python/unittest-tutorial/: README.md  pyproject.toml
web/fullstack-ai-saas/: package-lock.json
web/fullstack-ai-saas/lib/: utils.ts
web/nextjs-nextauth/: .eslintrc.json  README.md  next.config.mjs  package-lock.json  package.json  prettier.config.js
web/nextjs-supabase-todo/: README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
(+126 files in other folders)
