[tool.poetry]
name = "bentoml-tutorial"
version = "0.1.0"
description = ""
authors = ["Wickes1 <27881570+wickes1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bentoml = "^1.2.16"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
