[tool.poetry]
name = "langchain-fastapi"
version = "0.1.0"
description = ""
authors = ["Wickes1 <27881570+wickes1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
langchain = "^0.1.20"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"
pytest = "^8.2.0"
coverage = "^7.5.1"
pytest-asyncio = "^0.23.6"
setuptools = "^69.5.1"
anyio = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
