[tool.poetry]
name = "langchain-tutorial"
version = "0.1.0"
description = ""
authors = ["Wickes1 <27881570+wickes1@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "langchain_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.8.0"
google-api-python-client = "^2.125.0"
langchainhub = "^0.1.15"
langchain-openai = "^0.1.3"
ipykernel = "^6.29.4"
langchain-experimental = "^0.0.57"
langchain-elasticsearch = "^0.1.3"
pymilvus = "^2.4.0"
numpy = "^1.26.4"
scipy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
