[tool.poetry]
name = "llama-index-tutorial"
version = "0.1.0"
description = ""
authors = ["Wickes1 <27881570+wickes1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.10.47"
llama-index-core = "^0.10.47"
llama-index-llms-ollama = "^0.1.5"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-llms-groq = "^0.1.4"
llama-index-llms-azure-openai = "^0.1.8"
llama-index-embeddings-azure-openai = "^0.1.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
