[tool.poetry]
name = "transformer-tutorial"
version = "0.1.0"
description = ""
authors = ["Wickes1 <27881570+wickes1@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "transformer_tutorial" }]

[tool.poetry.dependencies]
python = ">=3.11"
ipykernel = "^6.29.4"
transformers = "^4.40.1"
ipywidgets = "^8.1.2"
datasets = "^2.19.0"
scikit-learn = "^1.5.1"
numpy = "<2.0.0"
python-dotenv = "^1.0.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/rocm6.0"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["F401"]
