[tool.poetry]
name = "langchain-begineer"
version = "0.1.0"
description = ""
authors = ["Wickes1 <27881570+wickes1@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "langchain_begineer"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.8.0"
google-api-python-client = "^2.125.0"
langchainhub = "^0.1.15"
langchain-openai = "^0.1.3"
langserve = {extras = ["all"], version = "^0.1.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
